client/ygogg/src/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.allFormatCardsHolder {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start; /* Aligns cards in the center horizontally */
  gap: 10px; /* Space between cards */
  padding: 10px; /* Optional padding for the container */
  overflow-x: hidden; /* Prevents horizontal scrolling */
  height: calc(100vh - 196px + 28px);
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}
.allFormatCardsHolder::-webkit-scrollbar {
  display: none;
}
h1, h3 {
  padding-left:10px;
}
.smallCardImage {
  justify-self: center;
  /* width:162px;
  height:237px; */
  width:131px;
  height:195.5px;
  margin:0;
  padding:0;
  &:hover {
    scale:1.02;
    cursor:pointer;
  }
}

.mask {
  position: fixed;
  z-index:99;
  background:#333;
  width:100vw;
  height:100vh;
  left:0;
  top:0;
  opacity:0.7;
}

.selectedCard{
  position:absolute;
  z-index:100;
  --selectedCardWidth:486px;
  --selectedCardHeight:711px;
  width:var(--selectedCardWidth); 
  height:var(--selectedCardHeight);
  top:calc(50% - var(--selectedCardHeight) / 2);
  left:calc(50% - var(--selectedCardWidth) / 2);
}

@media (max-width: 430px) {
  .smallCardImage {
    width:115px;
    height:168px;
  }
  .selectedCard {
    --selectedCardWidth:356px;
    --selectedCardHeight:521px;
  }
}

